# MFmovies3

./: .env  README.md  divisao_tarefas.txt  main.py  modelos.py  pyproject.toml
rotas/: avaliacoes.py  filmes.py  home.py  listaFavoritos.py  usuarios.py
